update nrms model with heybox and mind

--- a/python/repo/numpy.ipynb
+++ b/python/repo/numpy.ipynb
@@ -1,12 +1,58 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 数组定义"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# 若列表中的元素长度不一样，转成numpy数组时会出现错误：ValueError: setting an array element with a sequence"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 常见函数操作"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [
     "# np.take(list, order) order为打乱后的索引"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 索引操作"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# 索引值应成numpy数组，否则会出现错误：TypeError: only integer scalar arrays can be converted to a scalar index "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 下载和存储"
+   ],
    "metadata": {}
   },
   {
