--- a/pytorch/basic/pytorch_cookbook.ipynb
+++ b/pytorch/basic/pytorch_cookbook.ipynb
@@ -659,6 +659,15 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# torch.flatten(): 张量展平"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "### 数据类型转换"
