update nrms with mvke

--- a/python/basic/basics.ipynb
+++ b/python/basic/basics.ipynb
@@ -2316,6 +2316,15 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"3\""
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "# 文件读写\n",
     "    # read 读取整个文件\n",
     "    # readline 读取下一行,使用生成器方法\n",
@@ -2605,7 +2614,9 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# json.dump(content, file_object, indent=4)"
+    "# json.dump(content, file_object, indent=4)\n",
+    "from json import *\n",
+    "# f.write(JSONEncoder().encode(line)+'\\n') 其中line是个字典"
    ],
    "outputs": [],
    "metadata": {}
