--- a/pytorch/basic/pytorch_cookbook.ipynb
+++ b/pytorch/basic/pytorch_cookbook.ipynb
@@ -1166,6 +1166,29 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "\n",
+    "# 使用 torch.diag 取对角线元素，使用 torch.diag_embed() 恢复维度\n",
+    "# tensor([[ 0.7594,  0.8073, -0.1344],\n",
+    "#         [-1.7335, -0.4356, -0.0055],\n",
+    "#         [ 1.8326,  0.3900, -0.9933]])\n",
+    "# diag = torch.diag(a)  # 取 a 对角线元素，输出为 1*3\n",
+    "# print(diag)\n",
+    "# tensor([ 0.7594, -0.4356, -0.9933])\n",
+    "# a_diag = torch.diag_embed(diag)  # 由 diag 恢复为三维 3*3\n",
+    "# tensor([[ 0.7594,  0.0000,  0.0000],\n",
+    "#         [ 0.0000, -0.4356,  0.0000],\n",
+    "#         [ 0.0000,  0.0000, -0.9933]])\n",
+    "\n",
+    "# 取一个batch的对角线元素\n",
+    "# torch.diagonal(matrix, dim1=-2, dim2=-1) dim1和dim2表示要取对角线元素的矩阵维度，默认为0和1"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "## 张量运算"
@@ -2790,6 +2813,17 @@
     "# nn.utils.clip_grad_norm_()\n",
     "# nn.utils.rnn.pack_padded_sequence\n",
     "# nn.utils.rnn.pad_packed_sequence"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# 定义可训练的参数\n",
+    "# nn.Parameter(torch.zeros(in_dim,hid))\n",
+    "\t# 与torch.tensor(list,requires_grad=True)的区别，这个只是将参数变成可训练的，并没有绑定在module的parameter列表中。"
    ],
    "outputs": [],
    "metadata": {}
