--- a/pytorch/basic/pytorch_cookbook.ipynb
+++ b/pytorch/basic/pytorch_cookbook.ipynb
@@ -1199,6 +1199,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# torch.flip: 按照维度对输入进行翻转"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
