--- a/python/basic/basics.ipynb
+++ b/python/basic/basics.ipynb
@@ -616,7 +616,8 @@
    "outputs": [],
    "source": [
     "# 复杂语句结构\n",
-    "    # \"train\" if train else \"valid\" if val else \"test\""
+    "    # \"train\" if train else \"valid\" if val else \"test\"\n",
+    "    # for t in s for k in t"
    ]
   },
   {
@@ -870,6 +871,7 @@
     "\t# enumerate(sequence, start=0): sequence为一个序列、迭代器或其他支持迭代对象；start为下标起始位置\n",
     "\t# bin函数得到二进制的字符串\n",
     "\t# int函数有两个参数，第二个参数指明进制，如int(a,2)将a转换成二进制整数\n",
+    "\t# ord() | chr()\n",
     "    # (2): python函数式编程\n",
     "    \t# map | reduce | filter\n",
     "    # (3): 高阶函数\n",
@@ -1557,6 +1559,261 @@
     "l1 = ['b','c','d','c','a','a']\n",
     "l2 = sorted(set(l1),key=l1.index)\n",
     "print(l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 字典\n",
+    "    # (1): 字典生成/推导式\n",
+    "    \t# d = {key: value for (key, value) in iterable}\n",
+    "    # (2): 字典按value值进行排序\n",
+    "    \t# sorted(d.items(),key=lambda x:x[1]) # x[0]代表用key进行排序；x[1]代表用value进行排序\n",
+    "    # (3): __getitem__\n",
+    "    # (4): 从列表构建字典: fromkeys\n",
+    "        # 可对列表进行去重\n",
+    "    # (5): 自带函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(['k', '1'],), (['k1', '2'],), (['k2', '3'],), (['k3', '4'],)]\n",
+      "{'k': 1, 'k1': 2, 'k2': 3, 'k3': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字典(1): 字典生成/推导式\n",
+    "s = \"k:1|k1:2|k2:3|k3:4\"\n",
+    "print([(t.split(\":\"),) for t in s.split(\"|\")])\n",
+    "d = {k:int(v) for t in s.split(\"|\") for k, v in (t.split(\":\"),)}\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字典(3): __getitem__\n",
+    "d = {'k': 1, 'k1': 2, 'k2': 3, 'k3': 4}\n",
+    "print(d['k'])\n",
+    "print(d.__getitem__('k1'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "{1: None, 2: None, 3: None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字典(4): 从列表构建字典\n",
+    "b = {}\n",
+    "a = [1,1,2,2,3]\n",
+    "b = b.fromkeys(a)\n",
+    "c = list(b.keys())\n",
+    "print(c)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "{2: 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字典(5): 自带函数\n",
+    "    # pop()\n",
+    "d={1:2,2:3}\n",
+    "print(d.pop(1))\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 字符串\n",
+    "    # (1): 自带函数\n",
+    "\t# .isalpha() | .isdigit() | .isalnum()\n",
+    "\t# .islower() | .isupper() | .lower() | .upper() | .capitalize() | .istitle() | .isspace()\n",
+    "\t# .split() | .replace() | .index() | .reverse()\n",
+    "\t    # split(str, num): str为分隔符，默认为所有的空字符\n",
+    "\t    \t# 包括空格、换行(\\n)、制表符(\\t)等；num为分割次数，默认为 -1，即分隔所有\n",
+    "    \t    # .rsplit(): 参数同上，只不过是从后向前分割\n",
+    "\t# .endswith()\n",
+    "\t# .splitlines() 按\\n或\\r划分得到列表元素\n",
+    "    # (2): 正则表达式\n",
+    "\t# import re\n",
+    "    # (3): 字符编码\n",
+    "\t# ASCII: '0':48; 'A':65; 'a':97\n",
+    "\t# 字符串前加u: 以unicode格式进行编码，一般用在中文字符串前面，防止因为源码储存格式问题，导致再次使用时出现乱码\n",
+    "\t    # 加r: 去掉反斜杠的转义机制，常用于正则表达式\n",
+    "\t    # 加b: 表示这是一个bytes对象，网络编程中，服务器和浏览器只认bytes类型数据\n",
+    "\t    \t# 如：send函数的参数和recv函数的返回值都是bytes类型\n",
+    "\t    # 加f: 表示在字符串内支持大括号内的python表达式\n",
+    "\t# 在 python3 中，bytes和str的互相转换方式是\n",
+    "\t    # str.encode('utf-8')\n",
+    "\t    # bytes.decode('utf-8')\n",
+    "    # (4): 字符串格式化\n",
+    "    \t# %和.format\n",
+    "\t# %无法传递元组，format没有问题\n",
+    "    # (5): 常用操作"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字符串(1): 自带函数\n",
+    "    # str.find()\n",
+    "    # str.index()\n",
+    "\t# index()函数类似于find()函数\n",
+    "\t# 在python中也是在字符串中查找子串第一次出现的位置，跟find()不同的是，未找到则抛出异常\n",
+    "    # str.rfind(): 倒序字符串查找函数\n",
+    "    # str.rindex()\n",
+    "\t# rindex()函数类似于rfind()函数\n",
+    "\t# 在python中也是在字符串中倒序查找子串最后一次出现的位置，跟rfind()不同的是，未找到则抛出异\n",
+    "\n",
+    "# 返回str中第一次出现的substr的第一个字母的标号\n",
+    "# 如果str中没有substr则返回-1，也就是说从左边算起的第一次出现的substr的首字母标号\n",
+    "print('aabbcc'.find('bb')) \n",
+    "\n",
+    "# 返回str中最后出现的substr的第一个字母的标号\n",
+    "# 如果str中没有substr则返回-1，也就是说从右边算起的第一次出现的substr的首字母标号\n",
+    "print('adsfddf'.rfind('d'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi there (1, 2, 3)\n",
+      "hi there (1, 2, 3)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "not all arguments converted during string formatting",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-8a1e29b596c0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"hi there {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"hi there %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;31m# 提供一个单元素的数组而不是一个参数\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"hi there %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: not all arguments converted during string formatting"
+     ]
+    }
+   ],
+   "source": [
+    "# 字符串(4): 字符串格式化\n",
+    "name=(1,2,3)\n",
+    "print(\"hi there {}\".format(name))\n",
+    "print(\"hi there %s\" % (name,) ) # 提供一个单元素的数组而不是一个参数\n",
+    "print(\"hi there %s\" % name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcdefghijklmnopqrstuvwxyz\n",
+      "abcdefghijklmnopqrstuvwxyz\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字符串(5): 常用操作\n",
+    "    # 生成26个小写字母\n",
+    "\n",
+    "import string\n",
+    "letters = string.ascii_lowercase\n",
+    "print(letters)\n",
+    "\n",
+    "letters = \"\".join(map(chr, range(ord('a'), ord('z') + 1)))\n",
+    "print(letters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abd  bnd\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字符串(5): 常用操作\n",
+    "    # 去除标点\n",
+    "import string\n",
+    "text = \"abd, bnd\"\n",
+    "text = text.translate(str.maketrans(string.punctuation, ' ' * len(string.punctuation)))\n",
+    "print(text)"
    ]
   }
  ],
