--- a/python/basic/basics.ipynb
+++ b/python/basic/basics.ipynb
@@ -617,7 +617,8 @@
    "source": [
     "# 复杂语句结构\n",
     "    # \"train\" if train else \"valid\" if val else \"test\"\n",
-    "    # for t in s for k in t"
+    "    # for t in s for k in t\n",
+    "    # with urllib.request.urlopen(url) as response, open(filename, 'wb') as outfile:"
    ]
   },
   {
@@ -1814,6 +1815,39 @@
     "text = \"abd, bnd\"\n",
     "text = text.translate(str.maketrans(string.punctuation, ' ' * len(string.punctuation)))\n",
     "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 文件读写\n",
+    "    # (1): 读\n",
+    "\t# read 读取整个文件\n",
+    "\t# readline 读取下一行，使用生成器方法\n",
+    "\t# readlines 读取整个文件到一个迭代器以供我们遍历\n",
+    "    # (2): 文件对象\n",
+    "\t# f.fileno()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 文件读写(1): 读\n",
+    "def get_lines():\n",
+    "    with open('file.txt','rb') as f: # r是只读，r+是读写\n",
+    "        return f.readlines()\n",
+    "def get_lines(): # 现在要处理一个大小为10G的文件，但是内存只有4G  -->   需要分批读入，太小会在读取操作花费过多时间\n",
+    "    with open('file.txt','rb') as f:\n",
+    "        for i in f:\n",
+    "            yield i\n",
+    "\n",
+    "# 还可借助mmap"
    ]
   }
  ],
