--- a/python/repo/bs4.ipynb
+++ b/python/repo/bs4.ipynb
@@ -4,40 +4,22 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1641028355.1017113"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import time\n",
-    "time.time() "
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time.struct_time(tm_year=2022, tm_mon=1, tm_mday=1, tm_hour=17, tm_min=13, tm_sec=2, tm_wday=5, tm_yday=1, tm_isdst=0)\n",
-      "01_01-17-13-02\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(time.localtime(time.time()))\n",
-    "print(time.strftime('%m_%d-%H-%M-%S', time.localtime(time.time())))"
+    "content = \"\"\n",
+    "soup = BeautifulSoup(content) # content为字符串形式的网页内容\n",
+    "for t in soup(['style', 'script']): \n",
+    "\tt.extract()\n",
+    "text = soup.get_text()"
    ]
   }
  ],
@@ -47,6 +29,7 @@
   },
   "kernelspec": {
    "display_name": "Python 3.6.13 64-bit ('ctrtf': conda)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
