--- a/python/repo/logging.ipynb
+++ b/python/repo/logging.ipynb
@@ -4,20 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sys.version_info(major=3, minor=6, micro=13, releaselevel='final', serial=0)\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys\n",
-    "print(sys.version_info)\n",
-    "print(sys.version_info > (3, 0))"
+    "import logging"
    ]
   },
   {
@@ -26,7 +15,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.exit(1)"
+    "logging.basicConfig(level=logging.INFO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.INFO)\n",
+    "formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
+    "log_file_path = \"path\"\n",
+    "file_handler = logging.FileHandler(log_file_path)\n",
+    "file_handler.setLevel(logging.INFO)\n",
+    "file_handler.setFormatter(formatter)\n",
+    "logger.addHandler(file_handler)\n",
+    "logger.info('xxx')"
    ]
   }
  ],
@@ -36,6 +42,7 @@
   },
   "kernelspec": {
    "display_name": "Python 3.6.13 64-bit ('ctrtf': conda)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
