--- a/python/repo/math.ipynb
+++ b/python/repo/math.ipynb
@@ -2,27 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1641028355.1017113"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import time\n",
-    "time.time() "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -30,14 +9,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time.struct_time(tm_year=2022, tm_mon=1, tm_mday=1, tm_hour=17, tm_min=13, tm_sec=2, tm_wday=5, tm_yday=1, tm_isdst=0)\n",
-      "01_01-17-13-02\n"
+      "2.718281828459045\n",
+      "1.0\n",
+      "1.0\n",
+      "1.1447298858494002\n"
      ]
     }
    ],
    "source": [
-    "print(time.localtime(time.time()))\n",
-    "print(time.strftime('%m_%d-%H-%M-%S', time.localtime(time.time())))"
+    "import math\n",
+    "\n",
+    "print(math.exp(1))\n",
+    "\n",
+    "# log() 返回 x 的自然对数\n",
+    "print(math.log(math.exp(1)))\n",
+    "print(math.log(2,2)) # 第二参数为底数\n",
+    "print(math.log(math.pi))"
    ]
   }
  ],
@@ -47,6 +34,7 @@
   },
   "kernelspec": {
    "display_name": "Python 3.6.13 64-bit ('ctrtf': conda)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
