--- a/python/repo/pickle.ipynb
+++ b/python/repo/pickle.ipynb
@@ -4,20 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sys.version_info(major=3, minor=6, micro=13, releaselevel='final', serial=0)\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys\n",
-    "print(sys.version_info)\n",
-    "print(sys.version_info > (3, 0))"
+    "import pickle"
    ]
   },
   {
@@ -26,7 +15,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.exit(1)"
+    "pickle.HIGHEST_PROTOCOL\n",
+    "# 这是一个整数，表示最高可用的协议版本\n",
+    "# 这个值可以作为参数protocol传给函数dump()和dumps()\n",
+    "# 对应的协议5是3.8中的\n",
+    "\n",
+    "pickle.DEFAULT_PROTOCOL\n",
+    "# 这是一个整数，表示用来pickling的默认协议版本\n",
+    "# 可能比pickle.HIGHEST_PROTOCOL小\n",
+    "# 目前默认的协议版本是3，协议3是专门为python3设计的一种新的协议"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pickle.dump(obj, file, protocol=None)\n",
+    "# pickle.load(file)"
    ]
   }
  ],
@@ -36,6 +43,7 @@
   },
   "kernelspec": {
    "display_name": "Python 3.6.13 64-bit ('ctrtf': conda)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
