--- a/python/repo/random.ipynb
+++ b/python/repo/random.ipynb
@@ -4,21 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2022"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import datetime\n",
-    "datetime.datetime.now().year"
+    "import random"
    ]
   },
   {
@@ -27,26 +15,47 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 1, 3, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 打乱一个排好序的list对象alist\n",
+    "alist = [1,2,3,4,5]\n",
+    "random.shuffle(alist)\n",
+    "print(alist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "93"
+       "[1, 4]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 输入日期， 判断这一天是这一年的第几天？ 2019.4.3\n",
-    "def ymd():\n",
-    "    year = input(\"请输入年份: \")\n",
-    "    month = input(\"请输入月份: \")\n",
-    "    day = input(\"请输入天: \")\n",
-    "    date1 = datetime.date(year=int(year),month=int(month),day=int(day))\n",
-    "    date2 = datetime.date(year=int(year),month=1,day=1)\n",
-    "    return (date1-date2).days+1\n",
-    "ymd()"
+    "random.sample(alist, 2) # 从list中随机抽取2个元素"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import randint"
    ]
   }
  ],
@@ -56,6 +65,7 @@
   },
   "kernelspec": {
    "display_name": "Python 3.6.13 64-bit ('ctrtf': conda)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
