--- a/python/repo/copy.ipynb
+++ b/python/repo/copy.ipynb
@@ -2,42 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1641028355.1017113"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import time\n",
-    "time.time() "
+    "import copy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time.struct_time(tm_year=2022, tm_mon=1, tm_mday=1, tm_hour=17, tm_min=13, tm_sec=2, tm_wday=5, tm_yday=1, tm_isdst=0)\n",
-      "01_01-17-13-02\n"
+      "a =  [1, 2, 3, 4, ['a', 'b', 'c'], 5]\n",
+      "b =  [1, 2, 3, 4, ['a', 'b', 'c'], 5]\n",
+      "c =  [1, 2, 3, 4, ['a', 'b', 'c']]\n",
+      "d =  [1, 2, 3, 4, ['a', 'b']]\n"
      ]
     }
    ],
    "source": [
-    "print(time.localtime(time.time()))\n",
-    "print(time.strftime('%m_%d-%H-%M-%S', time.localtime(time.time())))"
+    "a = [1, 2, 3, 4, ['a', 'b']]  # 原始对象\n",
+    "\n",
+    "b = a  # 赋值，传对象的引用\n",
+    "c = copy.copy(a)  # 对象拷贝，浅拷贝\n",
+    "d = copy.deepcopy(a)  # 对象拷贝，深拷贝\n",
+    "\n",
+    "a.append(5)  # 修改对象a\n",
+    "a[4].append('c')  # 修改对象a中的['a', 'b']数组对象\n",
+    "\n",
+    "print('a = ', a)\n",
+    "print('b = ', b)\n",
+    "print('c = ', c)\n",
+    "print('d = ', d)"
    ]
   }
  ],
@@ -47,6 +48,7 @@
   },
   "kernelspec": {
    "display_name": "Python 3.6.13 64-bit ('ctrtf': conda)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
