--- a/python/repo/heapq.ipynb
+++ b/python/repo/heapq.ipynb
@@ -4,21 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2022"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import datetime\n",
-    "datetime.datetime.now().year"
+    "# 堆\n",
+    "import heapq"
    ]
   },
   {
@@ -27,26 +16,49 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 9, 7, 3, 10]\n",
+      "[2, 3, 9, 7, 10]\n",
+      "[3, 7, 9, 10]\n",
+      "3\n",
+      "[3, 7, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 9, 7, 3]\n",
+    "heapq.heappush(a,10)\n",
+    "print(a)\n",
+    "heapq.heappop(a) # 弹出最小的值\n",
+    "print(a)\n",
+    "heapq.heappop(a) # 弹出最小的值\n",
+    "print(a)\n",
+    "print(a[0]) # # 查看堆中最小的值，不弹出\n",
+    "heapq.heapify(a) # 以线性时间将一个列表转为堆\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "93"
+       "[10, 9]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 输入日期， 判断这一天是这一年的第几天？ 2019.4.3\n",
-    "def ymd():\n",
-    "    year = input(\"请输入年份: \")\n",
-    "    month = input(\"请输入月份: \")\n",
-    "    day = input(\"请输入天: \")\n",
-    "    date1 = datetime.date(year=int(year),month=int(month),day=int(day))\n",
-    "    date2 = datetime.date(year=int(year),month=1,day=1)\n",
-    "    return (date1-date2).days+1\n",
-    "ymd()"
+    "K = 2\n",
+    "heapq.nlargest(K, a)"
    ]
   }
  ],
@@ -56,6 +68,7 @@
   },
   "kernelspec": {
    "display_name": "Python 3.6.13 64-bit ('ctrtf': conda)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
