--- a/python/repo/urllib.ipynb
+++ b/python/repo/urllib.ipynb
@@ -2,42 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1641028355.1017113"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import time\n",
-    "time.time() "
+    "import urllib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time.struct_time(tm_year=2022, tm_mon=1, tm_mday=1, tm_hour=17, tm_min=13, tm_sec=2, tm_wday=5, tm_yday=1, tm_isdst=0)\n",
-      "01_01-17-13-02\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(time.localtime(time.time()))\n",
-    "print(time.strftime('%m_%d-%H-%M-%S', time.localtime(time.time())))"
+    "url = \"\"\n",
+    "urllib.request.urlopen(url)"
    ]
   }
  ],
@@ -47,6 +26,7 @@
   },
   "kernelspec": {
    "display_name": "Python 3.6.13 64-bit ('ctrtf': conda)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
