--- a/python/repo/xlrd.ipynb
+++ b/python/repo/xlrd.ipynb
@@ -4,40 +4,24 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1641028355.1017113"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import time\n",
-    "time.time() "
+    "import xlrd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time.struct_time(tm_year=2022, tm_mon=1, tm_mday=1, tm_hour=17, tm_min=13, tm_sec=2, tm_wday=5, tm_yday=1, tm_isdst=0)\n",
-      "01_01-17-13-02\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(time.localtime(time.time()))\n",
-    "print(time.strftime('%m_%d-%H-%M-%S', time.localtime(time.time())))"
+    "path = \"\"\n",
+    "w = xlrd.open_workbook(path)\n",
+    "w.sheet_names()\n",
+    "s = w.sheet_by_index(0)\n",
+    "s.nrows \n",
+    "s.ncols\n",
+    "# s.row_values(i) # i是行索引"
    ]
   }
  ],
@@ -47,6 +31,7 @@
   },
   "kernelspec": {
    "display_name": "Python 3.6.13 64-bit ('ctrtf': conda)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
